--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="navbar">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
