--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <footer>dsfdfgd</footer>
     <script src="./main.js"></script>
   </body>
 </html>
